--- a/WebManagerApp/lesson1/src/components/Header.css
+++ b/WebManagerApp/lesson1/src/components/Header.css
@@ -2,6 +2,7 @@
     position: fixed;
     width: 100%;
     display: flex;
+    flex-direction: row !important;
     align-items: center;
     background-color: #20272F;
     z-index: 3;
