--- a/WebManagerApp/lesson1/src/components/Home.css
+++ b/WebManagerApp/lesson1/src/components/Home.css
@@ -92,6 +92,11 @@
     transition: all 0.4s;
 }
 
+.loginForm .btn:hover {
+    color: #DDD;
+    transform: scale(1.05);
+}
+
 .errors {
     margin-top: 40px;
 }
