--- a/WebManagerApp/lesson1/src/Manager.css
+++ b/WebManagerApp/lesson1/src/Manager.css
@@ -4,3 +4,19 @@
     top: 85px;
     z-index: 1;
 }
+
+.datepicker {
+    z-index: 10;
+    position: absolute;
+    top: 40vh;
+    width: 100%;
+    display: flex;
+    justify-content: center;
+}
+
+.datepicker-bar {
+    height: 40px;
+    width: 15rem;
+    text-align: center;
+    border-radius: 5px;
+}
